@@ -9,19 +9,22 @@ buildscript {
 }
 
 apply plugin: 'application'
+
+mainClassName = 'com.hiddenswitch.spellsource.applications.Clustered'
+
 apply plugin: 'com.github.johnrengelman.shadow'
 
 configurations.all {
     resolutionStrategy {
-        force 'com.hazelcast:hazelcast:3.10.2'
+        force 'com.hazelcast:hazelcast:3.11'
     }
 }
+
 
 shadowJar {
     zip64 true
 }
 
-mainClassName = 'com.hiddenswitch.spellsource.applications.Clustered'
 
 configurations {
     quasar
@@ -39,22 +42,22 @@ repositories {
 }
 
 dependencies {
-    quasar files("lib/quasar-core-0.7.9-jdk8.jar")
+    quasar files("lib/quasar-core-0.8.0.jar")
 
     compile group: 'com.hazelcast', name: 'hazelcast-aws', version: '2.1.0'
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
     compile group: 'com.lambdaworks', name: 'scrypt', version: '1.4.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-validator', name: 'commons-validator', version: '1.4.1'
-    compile group: 'io.vertx', name: 'vertx-core', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-mongo-client', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-web-client', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-service-discovery', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-web', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-auth-common', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-rx-java2', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-mail-client', version: '3.5.1'
+    compile group: 'io.vertx', name: 'vertx-core', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-mongo-client', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-web-client', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-service-discovery', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-web', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-auth-common', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-rx-java2', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-mail-client', version: '3.6.0'
     compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.7'
     compile group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '2.0.3'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
@@ -67,11 +70,12 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'org.unitils', name: 'unitils-core', version: '3.4.3'
-    testCompile group: 'io.vertx', name: 'vertx-unit', version: '3.5.1'
+    testCompile group: 'io.vertx', name: 'vertx-unit', version: '3.6.0'
     testCompile group: 'io.github.robwin', name: 'assertj-swagger', version: '0.5.0'
     testCompile group: 'org.jboss.resteasy', name: 'resteasy-client', version: '3.1.0.Final'
     testCompile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.4.9'
     testCompile group: 'org.apache.curator', name: 'curator-test', version: '3.3.0'
+    testCompile group: 'com.neovisionaries', name: 'nv-websocket-client', version: '2.6'
 }
 
 tasks.withType(JavaExec) {
@@ -79,7 +83,7 @@ tasks.withType(JavaExec) {
 }
 
 test {
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    jvmArgs("-javaagent:${configurations.quasar.iterator().next()}=mb", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED")
     systemProperty "spellsource.port", "8080"
     systemProperty "vertx.logger-delegate-factory-class-name", "io.vertx.core.logging.SLF4JLogDelegateFactory"
     useJUnit()
@@ -100,7 +104,7 @@ task(runDebug, dependsOn: 'classes', type: JavaExec) {
     systemProperty "games.defaultNoActivityTimeout", "999999000"
     main = 'com.hiddenswitch.spellsource.applications.LocalClustered'
     classpath = sourceSets.main.runtimeClasspath
-    jvmArgs = ["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005", "-javaagent:${configurations.quasar.iterator().next()}=mb"]
+    jvmArgs("-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005", "-javaagent:${configurations.quasar.iterator().next()}=mb", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED")
 }
 
 task(local, dependsOn: 'classes', type: JavaExec) {
@@ -108,7 +112,7 @@ task(local, dependsOn: 'classes', type: JavaExec) {
     systemProperty "spellsource.root.logger.level", "DEBUG"
     systemProperty "games.defaultNoActivityTimeout", "999999000"
     main = 'com.hiddenswitch.spellsource.applications.LocalClustered'
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    jvmArgs("-javaagent:${configurations.quasar.iterator().next()}=mb", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED")
     classpath = sourceSets.main.runtimeClasspath
 }
 
@@ -130,6 +134,6 @@ task(localWindows, dependsOn: 'classes', type: JavaExec) {
     systemProperty "spellsource.port", "8080"
     systemProperty "mongo.url", "mongodb://localhost:27017"
     main = 'com.hiddenswitch.spellsource.applications.LocalClustered'
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    jvmArgs("-javaagent:${configurations.quasar.iterator().next()}=mb", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED")
     classpath = sourceSets.main.runtimeClasspath
 }
